# audio_downloader

./: .gitignore  Makefile  docker-compose.yml
backend/: pyproject.toml
backend/docker/backend/: Dockerfile
backend/docker/backend/config/supervisord/: supervisord.local.conf  tgload.local.cfg
backend/envs/local/: build.env  db.env
backend/src/: all_cookies.txt  main.py  task_session.py  tasks.py  test.py  test_cl.py  yt_util.py
backend/src/common/: settings.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 1ead7b19f5ae_audio_job.py
backend/src/models/: audio.py  base.py
