[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "adanc_sftsrv",email = "adanc@softseveinc.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "yt-dlp (>=2025.9.26,<2026.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "watchfiles (>=1.1.1,<2.0.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
